# weather

./: .gitignore  Cargo.toml  Trunk.toml  app.css  index.html  tailwind.config.js
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: geo.rs  mod.rs  weather.rs
src/components/: daily.rs  home.rs  hourly.rs  mod.rs  search.rs  weather_icon.rs
src/utils/: http.rs  mod.rs
