[package]
name = "tauri_weather_front"
version = "0.0.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
chrono = "0.4.31"
yew-router = "0.18.0"
gloo-storage = "0.3.0"
yew-hooks = "0.3.0"
yew_icons = {version="0.8.0", features=["lucide"]}
anyhow = "1.0.75"
gloo = "0.10.0"
clone-macro = "0.1.0"

[workspace]
members = ["src-tauri"]
